Check that the file starts with  the EXTM3U tag